weaviate data types

--- a/Weaviate/Notes.ipynb
+++ b/Weaviate/Notes.ipynb
@@ -95,21 +95,41 @@
    "source": [
     "## **Data Types in Weaviate**\n",
     "\n",
-    "### **Collection**\n",
+    "[Documentation](https://academy.weaviate.io/courses/wa050-py)\n",
     "\n",
-    "`Collection` is a group of related data objects in Weaviate. It serves as a container for organizing and managing similar types of data.\n",
+    "### **Objects**\n",
     "\n",
-    "### **Data Object**\n",
+    "An `Object` is an entity in a vector database like a `row` in a relational database. Each object has the following components:\n",
     "\n",
-    "A `Data Object` is an individual item or record within a collection. Each data object contains specific attributes and values that define its properties.\n",
+    "- `ID`: A unique identifier for the object.\n",
     "\n",
-    "### **Vector**\n",
+    "- `Properties`: Key-value pairs that store additional information about the object.\n",
     "\n",
-    "A `Vector` is a numerical representation of data in a multi-dimensional space. In Weaviate, vectors are used to represent the semantic meaning of data objects, enabling similarity searches and comparisons.\n",
+    "- `Vector`: A high-dimensional vector representation of the object, typically generated using embedding models.\n",
     "\n",
-    "### **Schema**\n",
+    "<img src=\"../Notes_Images/Object.png\" alt=\"Weaviate Object\" width=\"800\"/>\n",
     "\n",
-    "A `Schema` defines the structure and organization of data within a Weaviate instance. It specifies the collections, data objects, and their attributes, as well as the relationships between them.\n",
+    "<hr>\n",
+    "\n",
+    "### **Collections**\n",
+    "\n",
+    "A `Collection` organizes objects into distinct sets of information. \n",
+    "\n",
+    "Each collection includes metadata(configurations), indexes, and an object store.\n",
+    "\n",
+    "**Metadata/configurations**: Define the structure and behavior of the collection, including schema definitions, indexing strategies, and other settings.\n",
+    "\n",
+    "**Indexes**: Facilitate efficient searching and retrieval of objects\n",
+    "\n",
+    "**Object Store**: The actual storage location for the objects within the collection.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Collection.png\" alt=\"Weaviate Collection\" width=\"800\"/>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **Vectors**\n",
+    "\n",
+    "A `Vector` is a numerical representation of data in a high-dimensional space. In Weaviate, vectors are used to represent the semantic meaning of objects, enabling similarity searches and other vector-based operations.\n",
     "\n",
     "<hr>\n",
     "<hr>\n",
@@ -491,7 +511,6 @@
     "print(response.generated)  # Print the generated text (the commonalities between them)\n",
     "\n",
     "client.close()\n",
-    "\n",
     "```"
    ]
   }
