--- a/Weaviate/Weaviate.ipynb
+++ b/Weaviate/Weaviate.ipynb
@@ -354,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = weaviate.connect_to_local(headers=headers)\n"
+    "client = weaviate.connect_to_local(headers=headers)"
    ]
   },
   {
