weaviate data types

--- a/Weaviate/Notes.ipynb
+++ b/Weaviate/Notes.ipynb
@@ -129,7 +129,13 @@
     "\n",
     "### **Vectors**\n",
     "\n",
-    "A `Vector` is a numerical representation of data in a high-dimensional space. In Weaviate, vectors are used to represent the semantic meaning of objects, enabling similarity searches and other vector-based operations.\n",
+    "A vector embedding captures the meaning of an object as a series of numbers. This representation enables similarity-based search.\n",
+    "\n",
+    "An \"embedding model\" transforms your input into vectors. For example, the text `\"You're a wizard, Harry!\"` might become the vector `[0.0134, 0.8723, -0.4532, …, 0.5842]`. This is also called putting an object into a `\"high-dimensional vector space\",` because each vector has many numbers (dimensions), and thus a vector can be thought of as a point in this space.\n",
+    "\n",
+    "Similar concepts produce similar vectors. Vectors for `\"You're a wizard, Harry!\"` and `\"You can do magic, Henry!\"` would be mathematically close to each other. This enables Weaviate to understand they're related even though the exact words differ.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Vectors.png\" alt=\"Weaviate Vector Space\" width=\"800\"/>\n",
     "\n",
     "<hr>\n",
     "<hr>\n",
