weaviate data types

--- a/Weaviate/Notes.ipynb
+++ b/Weaviate/Notes.ipynb
@@ -145,6 +145,114 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a6fc9a1",
+   "metadata": {},
+   "source": [
+    "## **Indexes**\n",
+    "\n",
+    "`Indexes` in Weaviate are data structures that optimize the retrieval of objects based on their vector representations. They enable efficient similarity searches by organizing and structuring the vector data.\n",
+    "\n",
+    "In `Vector Database`, each collection has its own `indexes` that facilitate fast and accurate searches.\n",
+    "\n",
+    "Each index may speed up specific operations, such as vector search, keyword search, or filtering based on object properties.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Indexes.png\" alt=\"Weaviate Indexes\" width=\"800\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfb034be",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb1e5d20",
+   "metadata": {},
+   "source": [
+    "## **Weaviate API**\n",
+    "\n",
+    "`Weaviate API` allows you to interact with the Weaviate vector database programmatically. It provides endpoints for managing collections, objects, and performing searches.\n",
+    "\n",
+    "It provides:\n",
+    "\n",
+    "**RESTful API**: A RESTful interface for performing CRUD operations on collections and objects.\n",
+    "\n",
+    "**gRPC API**: A gRPC interface for high-performance communication with Weaviate.\n",
+    "\n",
+    "**GraphQL API**: A GraphQL interface for querying and managing data in Weaviate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70fad47e",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f6101b7",
+   "metadata": {},
+   "source": [
+    "## **Searching in Weaviate**\n",
+    "\n",
+    "### **Keyword Search**\n",
+    "\n",
+    "Keyword search uses a traditional text matching algorithm `(BM25)` for exact term matching.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Keyword.png\" alt=\"Weaviate Keyword Search\" width=\"800\"/>\n",
+    "\n",
+    "`BM25` (Best Matching 25) is a ranking function used by search engines to estimate the relevance of documents to a given search query. It is based on the probabilistic information retrieval model and is widely used in information retrieval systems.\n",
+    "\n",
+    "### **Vector Search**\n",
+    "\n",
+    "Vector search finds objects based on their vector similarity to a given query vector. It uses distance metrics like cosine similarity or Euclidean distance to measure similarity.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Vector_S.png\" alt=\"Weaviate Vector Search\" width=\"800\"/>\n",
+    "\n",
+    "### **Hybrid Search**\n",
+    "\n",
+    "Hybrid search combines both keyword and vector search to provide more comprehensive results. It allows you to find objects that match both textual and semantic criteria.\n",
+    "\n",
+    "<img src=\"../Notes_Images/Hybrid_S.png\" alt=\"Weaviate Hybrid Search\" width=\"800\"/>\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eb5a6ea",
+   "metadata": {},
+   "source": [
+    "## **Overview of Weaviate Modules**\n",
+    "\n",
+    "<img src=\"../Notes_Images/Overview.png\" alt=\"Weaviate Modules\" width=\"800\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "483349a9",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c5f328a7",
    "metadata": {},
    "source": [
